fix: fix pixelperfect shift in artist-description section

--- a/src/scss/artist/artist-description.scss
+++ b/src/scss/artist/artist-description.scss
@@ -8,7 +8,7 @@
   width: 100%;
 
   .content {
-    margin: 200px 0;
+    margin: 248px 0 225px;
     align-items: flex-start;
 
     text-align: left;
@@ -23,7 +23,7 @@
     gap: 1.5rem;
     flex-wrap: wrap;
 
-    margin-top: 32px;
+    margin-top: 35px;
 
     .btn {
       @include mixins.flex(row, flex-start, center);
